# forgetting-llms

./: .gitignore  CLAUDE.md  Current_success.md  PLAN.md  PROJECT.md  README.md  SKILLS.md  STATUS.md  SUMMARY.md  experiment_matrix_clean.csv  experiment_spreadsheet_simple.csv  models_snap.py  tasks.md  tasks_md_accomplishment_map.txt
clutter/: CHAT_HISTORY_2026-03-26.md  CHAT_HISTORY_2026-03-27.md  CHAT_HISTORY_2026-03-28.md  CURRENT_EXPERIMENT_STATE.md  EXPERIMENT_BOARD.md
environments/rg_mix_env/: README.md  generate_rg_mix_dataset.py  pyproject.toml  rg_mix_env.py  run_rg_mix_eval.py  test_env_loading.py
environments/rg_mix_env/.prime/: .env-metadata.json
requirements-locks/: main.txt  runner_bfcl.txt  runner_evalplus.txt  runner_labbench.txt  runner_lighteval.txt  runner_rg_mix.txt
scripts/: benchmark_env.sh.example  bootstrap_prime_configs.py  bootstrap_tau2bench_smoke_data.py  build_iid_control_dataset.py  build_mixed_dataset.py  convert_rl_dataset_to_sft.py  convert_sft_dataset_to_rl.py  download_models.py  eval.sh  eval_prime_checkpoint_sweep.py  eval_sweep.sh  eval_sweep_resumable.sh  eval_task_accuracy.py  eval_task_accuracy.sh  export_sft_checkpoint_dataset.py  export_venv_requirements.sh  generate_cross_family_trajectories.sh  generate_trajectories.sh  hf_auth.sh.example  import_dolci_sft.py  import_olmo_rl_data.py  infer_model_max_len.py  launch_cf_sft_matrix.sh  launch_olmo3_7b_baselines.sh  launch_olmo3_7b_sequential_matrix.sh  launch_phase1.sh  launch_phase2.sh  launch_qwen1_7b_gsm8k_baseline_interactive.sh  launch_sft_lora_ablation.sh  (+49 more)
(+15 files in other folders)
